# Utanfuto-kolcsonzo-3

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  README.md  RegisterDialog.cpp  RegisterDialog.h  RentDialog.cpp  RentDialog.h  ReservationDetailDialog.h  ReservationDetailsDialog.cpp  ResetPasswordDialog.cpp  ResetPasswordDialog.h  TrailerCard.cpp  TrailerCard.h  main.cpp
